env/k8s/stack/hello-deployment.yaml
{
  "kind": "Deployment",
  "apiVersion": "extensions/v1beta1",
  "metadata": {
    "name": "helloworld",
    "namespace": "default",
    "selfLink": "/apis/extensions/v1beta1/namespaces/default/deployments/helloworld",
    "uid": "31dcd97d-f39a-11e7-80d1-12112dbe6b6b",
    "resourceVersion": "36790",
    "generation": 4,
    "creationTimestamp": "2018-01-07T11:02:04Z",
    "labels": {
      "run": "helloworld"
    },
    "annotations": {
      "deployment.kubernetes.io/revision": "1"
    }
  },
  "spec": {
    "replicas": 4,
    "selector": {
      "matchLabels": {
        "run": "helloworld"
      }
    },
    "template": {
      "metadata": {
        "creationTimestamp": null,
        "labels": {
          "run": "helloworld"
        }
      },
      "spec": {
        "containers": [
          {
            "name": "helloworld",
            "image": "dockercloud/hello-world",
            "ports": [
              {
                "containerPort": 80,
                "protocol": "TCP"
              }
            ],
            "resources": {},
            "terminationMessagePath": "/dev/termination-log",
            "terminationMessagePolicy": "File",
            "imagePullPolicy": "Always"
          }
        ],
        "restartPolicy": "Always",
        "terminationGracePeriodSeconds": 30,
        "dnsPolicy": "ClusterFirst",
        "securityContext": {},
        "schedulerName": "default-scheduler"
      }
    },
    "strategy": {
      "type": "RollingUpdate",
      "rollingUpdate": {
        "maxUnavailable": 1,
        "maxSurge": 1
      }
    }
  },
  "status": {
    "observedGeneration": 4,
    "replicas": 4,
    "updatedReplicas": 4,
    "readyReplicas": 4,
    "availableReplicas": 4,
    "conditions": [
      {
        "type": "Available",
        "status": "True",
        "lastUpdateTime": "2018-01-07T11:23:03Z",
        "lastTransitionTime": "2018-01-07T11:23:03Z",
        "reason": "MinimumReplicasAvailable",
        "message": "Deployment has minimum availability."
      }
    ]
  }
}
