env/k8s/stack/hello-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: helloworld
spec:
  selector:
    run: "helloworld"
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
