env/k8s/stack/hello-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: helloworld
    servicePort: 80
  rules:
  - host: helloworld.io
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld
          servicePort: 3000
